# Veilux-Binary

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  README.md  fail.txt  genesis.example.json
.github/: PROMOTION.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  npm-publish.yml  pages.yml  release.yml
consensus/: Cargo.toml
consensus/src/: lib.rs  validator.rs  vote.rs
docs/: INSTALL.md  _config.yml  add-ons.md  ai-ollama.md  architecture.md  audit-2026-06.md  consensus-networking.md  evm-compat.md  index.html  index.md  privacy-model.md  roadmap.md  rpc-sdk.md  security.md
docs/_layouts/: default.html
evm/: Cargo.toml
evm/examples/: sign_tx.rs
evm/src/: bn254.rs  lib.rs  precompile.rs  rlp.rs  u256.rs  vm.rs
explorer/: README.md  app.js  index.html  style.css
kernel/: Cargo.toml
kernel/src/: cascade.rs  crypto.rs  lib.rs  prism.rs  state.rs  types.rs
lightclient/: Cargo.toml
lightclient/src/: lib.rs
network/: Cargo.toml
network/src/: auth.rs  lib.rs  message.rs
node/: Cargo.toml
node/src/: driver.rs  eth.rs  eth_rpc.rs  genesis.rs  ingress.rs  main.rs  node.rs  rpc_service.rs  slash_watch.rs  validator_loop.rs  viewsync.rs
prisms/ai/: Cargo.toml
prisms/ai/src/: lib.rs  ollama.rs
prisms/bridge/: Cargo.toml
prisms/bridge/src/: lib.rs  types.rs
prisms/confidential/: Cargo.toml
prisms/confidential/src/: lib.rs
prisms/contract/: Cargo.toml
prisms/contract/src/: lib.rs  vm.rs
prisms/dex/: Cargo.toml
prisms/dex/src/: lib.rs
prisms/multisig/: Cargo.toml
prisms/multisig/src/: lib.rs
prisms/name/: Cargo.toml
prisms/name/src/: lib.rs
prisms/nft/: Cargo.toml
prisms/nft/src/: lib.rs
prisms/oracle/: Cargo.toml
prisms/oracle/src/: lib.rs
prisms/staking/: Cargo.toml
prisms/staking/src/: lib.rs
prisms/storage/: Cargo.toml
prisms/storage/src/: lib.rs
prisms/token/: Cargo.toml
prisms/token/src/: lib.rs
prisms/vesting/: Cargo.toml
prisms/vesting/src/: lib.rs
rpc/: Cargo.toml
rpc/src/: lib.rs  server.rs  types.rs  ws.rs
sdk/: Cargo.toml
sdk-ts/: .gitignore  README.md  package.json  tsconfig.json
sdk-ts/examples/: explorer.ts  quickstart.ts  subscribe.ts  tsconfig.json  verify.ts
sdk-ts/src/: builders.ts  client.ts  encoding.ts  identity.ts  ids.ts  index.ts  subscription.ts  types.ts
sdk-ts/test/: compat.test.ts
sdk/examples/: quickstart.rs  vectors.rs
sdk/src/: lib.rs
store/: Cargo.toml
store/src/: lib.rs
veil/: Cargo.toml
veil/src/: attest.rs  disclosure.rs  identity.rs  ledger.rs  lib.rs  private.rs  projection.rs  view.rs
