[package]
name = "veilux-consensus"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "VEILUX consensus — stake-weighted BFT (Aurora) over the Photon kernel"

[dependencies]
veilux-kernel.workspace = true
veilux-veil.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
blake3.workspace = true
tracing.workspace = true
