[package]
name = "veilux-evm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "VEILUX EVM compatibility — Ethereum address/secp256k1 recovery, RLP, and raw-tx decoding for eth_* JSON-RPC"

[dependencies]
thiserror.workspace = true
hex.workspace = true
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "std"] }
sha3 = "0.10"
