[package]
name = "veilux-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Photon — the featherweight core kernel of VEILUX"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
blake3.workspace = true
