[package]
name = "veilux-lightclient"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "VEILUX light client — verify block headers and state inclusion proofs without a full node"

[dependencies]
veilux-kernel.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
