[package]
name = "veilux-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "VEILUX SDK — Rust client for building, signing, and submitting commands"

[dependencies]
veilux-kernel.workspace = true
veilux-veil.workspace = true
veilux-rpc.workspace = true
prism-token.workspace = true
prism-nft.workspace = true
prism-contract.workspace = true
prism-bridge.workspace = true
prism-storage.workspace = true
prism-ai.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
ureq = { version = "2", default-features = false }
