[package]
name = "veilux-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "VEILUX store — lightweight append-only block log and state snapshots"

[dependencies]
veilux-kernel.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
