[package]
name = "prism-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Bridge Prism — guardian-attested cross-chain transfers (Cosmos, Solana, EVM)"

[dependencies]
veilux-kernel.workspace = true
veilux-veil.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
blake3.workspace = true
