[package]
name = "prism-contract"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Contract Prism — PhotonVM, a deterministic stack-based smart contract VM"

[dependencies]
veilux-kernel.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
blake3.workspace = true
