[package]
name = "prism-multisig"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Multisig Prism — M-of-N shared accounts that propose, confirm and execute commands for VEILUX"

[dependencies]
veilux-kernel.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
blake3.workspace = true
