[package]
name = "prism-staking"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "VEILUX staking & governance Prism — stake native LUX, delegate, and vote on-chain proposals"

[dependencies]
veilux-kernel.workspace = true
prism-token.workspace = true
serde.workspace = true
serde_json.workspace = true
