[package]
name = "prism-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Storage Prism — content-addressed blob storage and pinning for VEILUX"

[dependencies]
veilux-kernel.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
blake3.workspace = true
