[package]
name = "prism-token"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Token Prism — fungible tokens (ERC-20-like) for VEILUX"

[dependencies]
veilux-kernel.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
blake3.workspace = true
